# NestedCMakeExample

./: .gitignore  CMakeLists.txt  README.md  test - 1.txt
calc/: CMakeLists.txt  add.cpp  div.cpp  mult.cpp  sub.cpp
include/: calc.h  sort.h
sort/: CMakeLists.txt  insert.cpp  select.cpp
test1/: CMakeLists.txt  calc.cpp
test2/: CMakeLists.txt  sort.cpp
